--- a/templates/Todo
+++ b/templates/Todo
@@ -10,3 +10,10 @@ Show notes made by a user (done)
 encrypt note text field (done)
 add slugs
 add tags
+
+january 21 hours pub 5 video 3 b/s 2 r/v 4 
+
+march 16 hr pub 7 video 1 b/s 1 r/v 3
+april 2 pub 4 video 2 r/v -
+may 1 pub 2 
+june 1 hr video 1 
