--- a/templates/Todo
+++ b/templates/Todo
@@ -8,8 +8,9 @@ Show notes made by a user (done)
 
 
 encrypt note text field (done)
-add slugs
-add tags
+add slugs (done)
+add tags (done)
+
 
 january 21 hours pub 5 video 3 b/s 2 r/v 4 
 
